--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -5,7 +5,7 @@ body{
     background-color: #50ac;
 }
 
-.container{
+.main_container{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -14,16 +14,25 @@ body{
     width: 100%;
 }
 
+.adicional_content{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    align-items: start;
+    gap: 20px;
+}
+
 .divs{
     box-sizing: border-box;
-    border: 2px solid #000;
     border-radius: 10px;
+    /*margin: auto;*/
 }
 
 span{
     text-decoration: underline;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px;
+    font-weight: bold;
     margin-bottom: 8px;
 }
 
@@ -35,14 +44,40 @@ span{
     justify-content: center;
 }
 
-.tabla_datos{
+.div_tabla{
     box-sizing: border-box;
     padding: 10px;
     width: fit-content;
-    margin-top: 50px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     text-align: center;
+}
+
+td, th{
+    min-width: 100px;
+    max-width: 200px;
+    padding: 5px;
+}
+
+td{
+    border: solid 1px #000;
+    border-radius: 5px;
+}
+
+.div_izquierda{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+.div_arriba_derecha{
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.div_abajo_derecha{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
 }
 
 .agregar_datos{
@@ -50,7 +85,6 @@ span{
     padding: 10px;
     min-width: fit-content;
     max-width: 600px;
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -63,10 +97,7 @@ span{
     padding: 10px;
     min-width: fit-content;
     max-width: 600px;
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    /*margin: 50px auto;*/
     text-align: center;
     align-items: center;
 }
@@ -76,7 +107,7 @@ span{
     padding: 10px;
     min-width: fit-content;
     max-width: 600px;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -86,8 +117,81 @@ span{
 
 .inputs{
     margin: 5px 0;
+    padding: 3px;
+    min-width: 100px;
     text-align: center;
-    background-color: #0ff5;
+    background-color: #0ff4;
+    accent-color: #0ff4;
     border: transparent;
     border-radius: 5px;
+}
+
+.inputs:focus{
+    outline: 1px solid #0ff7;
+}
+
+.submit_inputs_form{
+    margin: 5px 0;
+    padding: 3px;
+    min-width: 50px;
+    text-align: center;
+    background-color: transparent;
+    border: transparent;
+    border-radius: 5px;
+}
+
+.submit_inputs_form:hover{
+    color: #fffb;
+    cursor: pointer;
+}
+
+.submit_inputs{
+    margin: 5px 0;
+    padding: 3px;
+    min-width: 50px;
+    text-align: center;
+    background-color: #0ff4;
+    border: transparent;
+    border-radius: 5px;
+}
+
+.submit_inputs:hover{
+    color: #fffb;
+    cursor: pointer;
+}
+
+.check_inputs{
+    margin: 5px 0;
+    padding: 3px;
+    accent-color: #0ff4;
+}
+
+.check_inputs:focus{ 
+    outline: 1px solid #0ff7;
+}
+
+:placeholder-shown{
+    color: #fffb;
+}
+
+fieldset{
+    border: solid 1px #000;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 0;
+}
+
+legend{
+    padding: 0 5px;
+}
+
+.completada{
+    background-color: #0f06;
+    /* border: solid 10px #000;
+    border-radius: 5px; */
+    
+}
+
+.pendiente{
+    background-color: #dd0a;
 }
